workshop03/vs_config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vsns
  labels:
    app: code-server
    environment: workshop
